Refactored components that render header items

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "meteor-node-stubs": "~0.2.4",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.1",
     "react-modal": "^1.6.5",
