--- a/package.json
+++ b/package.json
@@ -7,16 +7,31 @@
   "dependencies": {
     "aws-sdk": "^2.50.0",
     "babel-runtime": "^6.20.0",
+    "install": "^0.10.1",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-dropzone": "^3.13.1",
+    "react-dropzone": "^3.13.2",
     "react-modal": "^1.6.5",
     "react-router": "^3.0.0",
     "react-simple-dropdown": "^3.0.0",
+    "react-tabs": "^1.1.0",
     "simpl-schema": "0.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.1"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
+    }
   }
 }
